tests/lean/binrelTypeMismatch.lean.expected.out
binrelTypeMismatch.lean:10:14-10:16: error: type mismatch
  ()
has type
  Unit : Type
but is expected to have type
  Bool : Type
binrelTypeMismatch.lean:15:21-15:22: error: type mismatch
  p
has type
  Prop : Type
but is expected to have type
  Bool : Type
Prop → sorry : Sort (imax 1 u_1)
binrelTypeMismatch.lean:20:27-20:28: error: type mismatch
  p
has type
  Prop : Type
but is expected to have type
  Bool : Type
Prop → sorry : Sort (imax 1 u_1)
